--- a/.github/workflows/master_cippn37gd.yml
+++ b/.github/workflows/master_cippn37gd.yml
@@ -15,20 +15,11 @@ env:
 jobs:
   deploy:
     runs-on: windows-latest
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E37BC4A454F949C49B2103F0C2570443 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_BF2F8220103F44418E1967DEBF1E56EA }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_548049A5EE7F4C688EB87E36B357966C }}
-
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
@@ -36,4 +27,4 @@ jobs:
           app-name: 'cippn37gd'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A04E5F01B73D4A6FAC840E28499BA485 }}
